flux/apps/production/podinfo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: podinfo
  namespace: default
  annotations:
    cert-manager.io/issuer: cluster-issuer-letsencrypt
spec:
  gatewayClassName: contour
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    hostname: podinfo.mircogericke.com
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: podinfo-tls
