flux/apps/production/podinfo/proxy.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: default
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`podinfo.mircogericke.com`)
    kind: Rule
    services:
    - name: podinfo
      port: 9898
  tls:
    secretName: certificate-podinfo
